# plane-mcp-server

./: CLAUDE.md  Dockerfile  pyproject.toml
.github/workflows/: cleanup-packages.yml  ecr.yml  ghcr.yml
docs/: per-user-pat-plan.md  workos-oauth-plan.md
plane_mcp/: __main__.py  client.py  link_app.py  server.py  user_pat_store.py  workspace_directory.py
plane_mcp/auth/: workos_auth_provider.py
plane_mcp/tools/: __init__.py  comment_assets.py  multi_workspace.py  pql_reference.py  work_item_comment_assets.py  work_item_types.py
tests/: test_link_app.py  test_multi_workspace.py  test_user_pat_store.py  test_workos_per_user.py  test_workspace_directory.py
